# rag-example

./: README.md  agentic_rag.py  app.py  pyproject.toml  requirement.txt
data/vector_store/: chroma.sqlite3
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  rag_pipeline.ipynb
src/: data_loader.py  embedding.py  search.py  vector_store.py
